tests/chapter_11/invalid_parse/missing_cast_parentheses.c
int main(void) {
    /* The type specifier in a cast expression must be in parentheses */
    return LONG64 0;
}